--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -7,7 +7,15 @@
 
 <h1>Jim's Testing Webpage</h1>
 <p> This is a test </p>
-
+  <br>
+<form>
+  radio input:<br>
+  <input type="radio" name="radio_input" value="male" checked> Type1 <br>
+  <input type="radio" name="radio_input" value="female"> Type2 <br>
+  <br>
+  text input:<br>
+  <input type="text" name="input_two">
+</form>
 
 </body>
 </html>
