--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -15,6 +15,7 @@
   <br>
   text input:<br>
   <input type="text" name="input_two">
+  <input name="submit" type="submit" value="submit"/>
 </form>
 
 </body>
