--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -2,21 +2,38 @@
 <html>
 <head>
 <title>Jim's Testing Webpage</title>
+  
+<!-- Inside the head, put Segment's code.  Get code from Segment App: https://app.segment.com/jimskeffington/home -->  
+<script>
+  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.1.0";
+  analytics.load("z7zgjI2PpmfRBzHZiNkIBbpjR2l99fqY");
+  analytics.page();
+  }}();
+</script>
+<!-- Copy/paste the above JS snippet.  If necessary, update the load key.  -->   
+  
 </head>
 <body>
 
 <h1>Jim's Testing Webpage</h1>
 <p> This is a test </p>
-  <br>
-<form>
+<br>
+
+<!-- Standard form specifications -->
+<form name="submit_data" onsubmit="identify(event)">
+<!-- on clicking "submit" - some magic must happen: call on Segment's JS function -->
   radio input:<br>
   <input type="radio" name="radio_input" value="male" checked> Type1 <br>
   <input type="radio" name="radio_input" value="female"> Type2 <br>
   <br>
   text input:<br>
   <input type="text" name="input_two">
+  <br>
+
   <input name="submit" type="submit" value="submit"/>
 </form>
+  
+  <!-- Segment's JavaScript function/s go here -->
 
 </body>
 </html>
