--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -33,7 +33,12 @@
   <input name="submit" type="submit" value="submit"/>
 </form>
   
-  <!-- Segment's JavaScript function/s go here -->
+<script type="text/javascript">
+  analytics.identify('\', {
+    name: '\',
+    email: '\'
+  });
+</script>
 
 </body>
 </html>
