--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -34,9 +34,9 @@
 </form>
   
 <script type="text/javascript">
-  analytics.identify('\', {
-    name: '\',
-    email: '\'
+  analytics.identify('f4ca124298', {
+    name: 'Michael Bolton',
+    email: 'mbolton@initech.com'
   });
 </script>
 
