--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -28,26 +28,25 @@
     <input type="radio" name="radio_input" value="type2"> Type 2 <br>
     <br>
     name:<br>
-    <input type="text" name="username_input">
+    <input type="text" name="fullname">
     <br><br>
     <input name="submit" type="submit" value="submit"/>
   </form>
+
+ <!-- Segment Calls go here, at the bottom of the body -->  
+  <script type="text/javascript">
+        function identify(e){
+          e.preventDefault();
+          var form = e.target;
+          var fullname = form["fullname"].value;
+
+          analytics.identify('1234', {
+              email: test123@test.com, 
+              name: fullname
+          });
+        }
+  </script>
   
-<!-- Segment Calls go here, at the bottom of the body --> 
-<script type="text/javascript">
-      function identify(e){
-        e.preventDefault();
-        var form = e.target;
-        var username = form["username_input"].value;
-      };
-        
-  /* Segment functions go here */  
-  analytics.identify('123abc', {
-    name: username,
-    email: 'mbolton@initech.com'
-  });
-  
-</script>
 
 </body>
 </html>
