--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -41,7 +41,7 @@
           var fullname = form["fullname"].value;
 
           analytics.identify('1234', {
-              email: test123@test.com, 
+              email: "test123@test.com", 
               name: fullname
           });
         }
