--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -42,7 +42,7 @@
           var fullname = form["fullname"].value;
 
           /* send data to Segment: IDENTIFY users */
-          analytics.identify('/', {
+          analytics.identify('\', {
               email: "test123@test.com", 
               name: fullname
           });
