--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -52,9 +52,9 @@
             prefered_president: president,
           });
           analytics.page('basic', 
-             /* name */             'jim\'s testing homepage', 
-             /* properties */       {'sample page property'},   /* must include brackets - even if empty */
-             /* options */          {integrations: {'Intercom': false}
+             /* name */             'jims testing homepage', 
+             /* properties */       'sample page property',   /* if empty, still include brackets {}*/
+             /* options */          {integrations: {'Intercom': false}}
              /* callback */
              );
           
