--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Jim's Testing Webpage</title>
-  
+ 
 <!-- Inside the head, put Segment's code.  Get code from Segment App: https://app.segment.com/jimskeffington/home -->  
 <script>
   !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.1.0";
@@ -51,11 +51,7 @@
           analytics.track('Form Submitted', {
             prefered_president: president,
           });
-          analytics.page('basic', 
-             /* name */             'jims testing homepage', 
-             /* properties */       'sample page property',   /* if empty, still include brackets {}*/
-             /* options */          {integrations: {'Intercom': false}}
-             /* callback */
+          analytics.page('basic'
              );
           
           /* remember that the PAGE call gets sent by default - with the JS snipper in the header */
