--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -57,8 +57,7 @@
           analytics.group('initital group of users', {
             industry: 'initital industry'
           });
-          analytics.alias('new_unique_ID_123abcdef456', 
-												['uniqueID_1a2b3c');
+          analytics.alias("newID_507f191e81");
   </script>
   
 
