--- a/testingHomepage.html
+++ b/testingHomepage.html
@@ -25,8 +25,8 @@
   <form name="submit_data" onsubmit="identify(event)">
   <!-- on clicking submit: call on Segment's JS function -->
     radio input:<br>
-    <input type="radio" name="president_input" value="JFK" checked> JFK Jr <br>
-    <input type="radio" name="president_input" value="Grant"> US Grant <br>
+    <input type="radio" name="president_input" value="Jackson" checked> Jackson <br>
+    <input type="radio" name="president_input" value="Hamilton"> Hamilton <br>
     <br>
     name:<br>
     <input type="text" name="fullname_input">
